--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,3 @@
 <template name="main">
-  <h1>GitDemoApp</h1>
-  This is a demo for us to practice
+ this is anything you want on your main page...
 </template>
